<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/intro"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/intro"
        android:id="@+id/LL1">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/input"
            android:layout_width="117dp"
            android:layout_height="wrap_content"

            android:inputType="textMultiLine"
          />

        <Button
            android:id="@+id/button1"
            android:layout_width="127dp"
            android:layout_height="wrap_content"

            android:text="@string/press"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_below="@id/LL1"
        android:layout_marginTop="50dp"
        android:id="@+id/linearLayout2">


        <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb1"
        android:layout_above="@+id/checkBox3"
        android:layout_alignEnd="@+id/textView" />

        <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb2"
        android:layout_above="@+id/view1"
        android:layout_alignEnd="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb3"
            android:layout_alignBaseline="@+id/checkBox2"
            android:layout_alignBottom="@+id/checkBox2"
            android:layout_alignEnd="@+id/textView" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/linearLayout" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/alt1"
                android:layout_above="@+id/radioButton4"
                android:layout_alignParentStart="true" />

            <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/alt2"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentStart="true" />
        </RadioGroup>

    </LinearLayout>



</RelativeLayout>
