<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introCell"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TableLayout
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/tvIntro"
        android:layout_centerHorizontal="true">

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="160dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCel1"
                android:layout_width="160dp"
                android:layout_height="73dp"
                android:text="@string/cel1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="160dp"
                android:layout_height="73dp"
                android:text="@string/cel2" />
        </TableRow>

    </TableLayout>
</RelativeLayout>